Apply min-width to source-manifest-window to avoid source manifest browser being too narrow on manifests with few canvases

--- a/app/styles/components/_import-canvases.scss
+++ b/app/styles/components/_import-canvases.scss
@@ -32,6 +32,7 @@
       display: inline-block;
       vertical-align: middle;
       width: 50%;
+      min-width: 500px;
       height: 100%;
 
       .source-manifest-viewer {
